--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Level up your studies at https://tcs-grw.github.io! Our one-stop shop offers expert-made notes, past papers, and top-notch resources to help you ace your exams at The City School.">
+    <meta name="description" content="Level up your studies at https://tcs-guj.github.io! Our one-stop shop offers expert-made notes, past papers, and top-notch resources to help you ace your exams at The City School.">
     <meta name="author" content="-DisliqR">
     <meta property="og:image" content="https://lh3.googleusercontent.com/a/ACg8ocI_JiDMX6a__l0Ao0Vxv4EWeHYC_FaTFYNwJiNJfwTBfhqQeugkHoSPO9fYZxbdGK6ovzQykcjxMZLjfafcU-h8Ag=s288-c-no">
 	  <meta property="og:image:type" content="image/png">
